crates/icydb-core/tests/ui/db/persisted_row_value_field_rejected.stderr
error[E0277]: the trait bound `icydb_core::value::Value: PersistedFieldSlotCodec` is not satisfied
  --> tests/ui/db/persisted_row_value_field_rejected.rs:23:8
   |
23 |     x: Value,
   |        ^^^^^ the trait `PersistedFieldSlotCodec` is not implemented for `icydb_core::value::Value`
   |
   = help: the following other types implement trait `PersistedFieldSlotCodec`:
             ()
             BTreeMap<K, V>
             BTreeSet<T>
             Nat
             Nat128
             Vec<T>
             bool
             i16
           and $N others
note: required by a bound in `__ICYDB_FIELD_X_MUST_IMPLEMENT_PERSISTED_FIELD_SLOT_CODEC_TO_BE_STORED`
  --> tests/ui/db/persisted_row_value_field_rejected.rs:21:10
   |
21 | #[derive(PersistedRow)]
   |          ^^^^^^^^^^^^ required by this bound in `__ICYDB_FIELD_X_MUST_IMPLEMENT_PERSISTED_FIELD_SLOT_CODEC_TO_BE_STORED`
   = note: this error originates in the derive macro `PersistedRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `icydb_core::value::Value: PersistedFieldSlotCodec` is not satisfied
  --> tests/ui/db/persisted_row_value_field_rejected.rs:23:8
   |
23 |     x: Value,
   |        ^^^^^ the trait `PersistedFieldSlotCodec` is not implemented for `icydb_core::value::Value`
   |
   = help: the following other types implement trait `PersistedFieldSlotCodec`:
             ()
             BTreeMap<K, V>
             BTreeSet<T>
             Nat
             Nat128
             Vec<T>
             bool
             i16
           and $N others
